# THI_Photovoltaik

./: .cache.sqlite  .dockerignore  .env  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Readme.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/: .cache.sqlite-journal  cleaned_data.csv  config-example.py  config.py  data_cleaning.py  data_loader.py  data_module.py  logging_setup.py  main.py  pv_data.db.bak  storage.py
src/components/: charts.py  formulas.py  header.py  kpis.py  storage.py
tests/: conftest.py  test_data_loader.py  test_data_module.py  test_logging_setup.py  test_main.py  test_pvdaten.ipynb  test_storage.py
tests/components/: test_charts.py  test_formulas.py  test_header.py  test_kpis.py  test_storage.py
tests/integration/: test_integration.py
